# WINGS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  index.html  mkdirp.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.mts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: frontend_template.md
.github/workflows/: test-on-pr.yml
src/: App.tsx  index.tsx  output.css  style.css
src-tauri/: Cargo.toml  build.rs  out.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: altos_packet_parser.rs  commands.rs  communication_manager.rs  communications_manager.rs  config_struct.rs  csv_manager.rs  data_processing.rs  file_handling.rs  main.rs  models.rs  packet.rs  packet_generator.rs  packet_parser.rs  packet_structure.rs  packet_structure_events.rs  packet_structure_manager.rs  packet_structure_manager_state.rs  packet_view_model.rs  receiving_loop.rs  sending_loop.rs  serial.rs  serial_ftdi.rs  serial_uart.rs  state.rs  test.rs  update_loop.rs  usb.rs
src-tauri/src/commands/: communication_commands.rs  display_commands.rs  file_commands.rs  mod.rs  packet_structure_manager_commands.rs  sending_commands.rs  serial_commands.rs  test_commands.rs
src-tauri/src/communication_drivers/: aim_adapter.rs  aim_driver.rs  aim_parser.rs  altos_driver.rs  altos_packet_parser.rs  binary_file_adapter.rs  byte_reader_driver.rs  csv_reader_driver.rs  featherweight_adapter.rs  featherweight_parser.rs  ftdi_spi_driver.rs  mod.rs  serial_packet_parser.rs  serial_port_adapter.rs  serial_port_driver.rs  teledongle_adapter.rs  teledongle_driver.rs  teledongle_packet_parser.rs
src-tauri/src/communications/: ftdi4222.rs  ftdi4222_safe.rs  mod.rs  serial_uart.rs  spi_ftdi.rs  telemetrum.rs
src-tauri/src/file_handling/: config_struct.rs  log_handlers.rs  mod.rs
src-tauri/src/models/: mod.rs  packet.rs  packet_structure.rs  packet_view_model.rs
src-tauri/src/state/: communication_manager_state.rs  communication_state.rs  config_state.rs  csv_manager_state.rs  data_processor_state.rs  file_handling_state.rs  generic_state.rs  mod.rs  mutex_utils.rs  packet_parser_state.rs  packet_structure_manager_state.rs  sending_loop_state.rs  serial_manager_state.rs  test_manager_state.rs
src-tauri/src/test/: packet_structure_manager.rs
src-tauri/test utilities/: out single.txt  out.txt  out_more.txt  rssi_out.txt
src/assets/: minecraft.txt
src/backend_interop/: BackendProvider.tsx  api_calls.ts  buffers.ts  types.ts
src/components/: ApiTestingTab.tsx  BackendInteropManagerProvider.tsx  BackendProvider.tsx  Boolean.tsx  BroadcastModal.tsx  Credits.tsx  DataTab.tsx  GraphTab.tsx  (+38 more)
(+49 files in other folders)
