[package]
name = "wings"
version = "1.3.0"
description = "The Ground Station of the University of Minnesota Twin Cities Rocket Team"
authors = ["University of Minnesota Twin Cities Rocket Team: Avionics Sub-Team Contributors"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "window-all", "dialog-all", "fs-all", "shell-open", "test"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
timer = "0.2.0"
chrono = "0.4.22"
serialport = "4.2.2"
readonly = "0.2"
anyhow = "1.0"
hex = "0.4"
csv = "1.3.0"

[dependencies.libftd2xx]
version = "0.32.3"
# statically link the vendor library, defaults to dynamic if not set
# this will make things "just work" on Linux and Windows
features = ["static"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
